[tool.poetry]
name = "progect"
version = "0.1.0"
description = ""
authors = ["Yulia <yuliaotrokova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
selenium = "^4.6.1"
webdriver-manager = "^3.8.5"
black = "^22.10.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
